# basic-projects

./: .gitignore  LICENSE  README.md
django-basic/: README.md  requeriments.txt
django-basic-2/: env-variables-example.txt
django-basic-allauth/: env-variables-example.txt  requeriments.txt
django-basic-allauth/django_basic_allauth/: manage.py
django-basic-minimum/: README.md  env-variables-example.txt  requirements.txt
django-basic-minimum/django_basic_minimum/: manage.py
django-basic-rest/: README.md  env-variables-example.txt  requirements.txt
django-basic-rest/django_basic_rest/: manage.py
django-reusable-app/: .gitignore  MANIFEST.in  README.md  docker-compose.yml  requirements.txt
django-reusable-app/reusable_app/: admin.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
django-reusable-app/wrapper/: settings.py  urls.py
generic-basic/: Makefile  README.md
generic-basic/src/: app  constants
html-css-js-basic/: README.md  index.html
html-css-js-basic-and-ui-examples/: README.md  index.html
html-css-js-basic-examples/: README.md
html-css-js-basic/css/: main.css
html-css-js-basic/folder1/: other1.html
html-css-js-basic/js/: main.js
html-css-js-examples/: README.md
python-basic/: .env.example  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  example_exterior_runner.py  pyproject.toml  setup.py
python-basic/.github/workflows/: lint.yml  security.yml  test.yml  typing.yml
python-basic/deploy/docker/: Dockerfile  docker-compose.yml
python-basic/python_basic/: __main__.py  main.py  runner.py
python-basic/python_basic/main/: main.py  module_example.py
python-basic/scripts/git/: validate_commit_msg.py
python-basic/src/: __main__.py  runner.py
python-basic/src/app_name/: __main__.py  app.py  config.py  constants.py
python-basic/src/app_name/package_1/: module_A.py
python-basic/src/app_name/package_hexagonal/api/: controllers.py
python-basic/src/app_name/package_hexagonal/core/application/services/: commands.py  queries.py
python-basic/src/app_name/package_hexagonal/core/domain/: entities.py
python-basic/src/app_name/package_hexagonal/infra/: event_publishers_kafka.py  repositories_sql.py
python-basic/src/python_basic/: __main__.py  app.py  constants.py
python-basic/src/python_basic/main/: main.py  settings.py
python-basic/src/python_basic/package_1/: module_A.py  module_example.py
python-basic/tests/: README.md
rust-basic/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md
rust-basic/.github/workflows/: typing.yml
rust-basic/crates/component_1/: Cargo.toml
rust-basic/crates/component_1/src/: lib.rs
rust-basic/crates/component_2_hexagonal/: Cargo.toml
rust-basic/crates/component_2_hexagonal/src/core/application/services/: queries.rs
rust-basic/crates/component_2_hexagonal/src/infra/: event_publishers_kafka.rs
rust-basic/deploy/docker/: Dockerfile
rust-basic/src/: config.rs  constants.rs  errors.rs  lib.rs  main.rs
rust-basic/src/package_1/: mod.rs  module_A.rs  module_B.rs  module_example.rs
rust-basic/src/package_2/: mod.rs
rust-basic/src/package_hexagonal/core/application/ports/in/: commands
rust-basic/src/package_hexagonal/infra/: mappers  repositories_sql
typescript-basic/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  package.json  tsconfig.json
(+181 files in other folders)
