[project]
name = "python_basic"
version = "0.1.0"
description = "A short description of your project"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["python", "hexagonal", "key3", "key4"]
classifiers = [ # Remove if not necessary (internal use)
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "pydantic>=2.0.0",  # Data validation (Standard in modern Python)
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/youruser/app-name"
"Bug Tracker" = "https://github.com/youruser/app-name/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app_name"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (import sorting)
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"