[project]
name = "app_name"
version = "0.1.0"
description = "A short description of your project"
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/youruser/app-name"
"Bug Tracker" = "https://github.com/youruser/app-name/issues"

# -------------------------
# UV DEV DEPENDENCIES
# -------------------------
[tool.uv]
dev-dependencies = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

# -------------------------
# BUILD SYSTEM
# -------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app_name"]

# -------------------------
# RUFF
# -------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]
ignore = []

# -------------------------
# PYTEST
# -------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"